# mcp-spain-travel

./: .gitignore  README.md  pyproject.toml
src/: config.py  server.py
src/cache/: manager.py
src/models/: accommodation.py  bus.py  common.py  connection.py  flight.py  train.py
src/providers/: amadeus.py  base.py  duffel.py  flixbus.py  google_hotels.py  ouigo.py  serpapi.py
src/providers/renfe/: ckan.py  connections.py  dwr.py  scraper.py
src/tools/: accommodation.py  buses.py  flights.py  multimodal.py  trains.py
tests/: conftest.py  test_cache.py
tests/test_providers/: test_amadeus.py  test_connections.py  test_duffel.py  test_flixbus.py  test_google_hotels.py  test_ouigo.py  test_renfe_ckan.py  test_renfe_dwr.py  test_serpapi.py
tests/test_tools/: test_accommodation.py  test_buses.py  test_flights.py  test_multimodal.py  test_trains.py
